--- a/package.json
+++ b/package.json
@@ -5,10 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "export": "next build && next export",
-    "start2": "node server.js"
+    "start-server": "node server.js"
   },
   "dependencies": {
     "next": "10.0.4",
@@ -18,6 +15,7 @@
   },
   "devDependencies": {
     "eslint": "8.25.0",
-    "eslint-config-next": "12.3.1"
+    "eslint-config-next": "12.3.1",
+    "sharp": "^0.31.1"
   }
 }
