--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "deploy": "next build && node server.js"
   },
   "dependencies": {
+    "axios": "^1.1.3",
+    "bootstrap": "^5.2.2",
+    "jquery": "^3.6.1",
     "next": "10.0.4",
+    "popper.js": "^1.16.1",
     "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "bootstrap": "^5.2.0"
+    "react-dom": "17.0.1"
   },
   "devDependencies": {
     "sharp": "^0.31.1"
