CHANGE: Docker compose

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,9 +1,4 @@
-# nginx/nginx.conf
 
-events {
-}
-
-http {
     upstream nextjs {
         server nextjs:3000;
     }
@@ -22,8 +17,8 @@ http {
         root /srv/public;
         server_tokens off;
 
-        ssl_certificate /etc/nginx/ssl/cert.pem;
-        ssl_certificate_key /etc/nginx/ssl/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/eike-eric-wientjes.de/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/eike-eric-wientjes.de/privkey.pem;
 
         location / {
             try_files $uri $uri/ @nextjs;
@@ -37,6 +32,6 @@ http {
             proxy_redirect off;
             proxy_pass http://nextjs;
             proxy_cookie_path / "/; HTTPOnly; Secure";
-        }
     }
 }
+
