--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,6 @@ services:
     container_name: nextjs
     ports:
       - "3000:3000"
-    restart: always
   nginx:
     build:
       dockerfile: nginx.Dockerfile
@@ -15,5 +14,5 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - /etc/letsencrypt/live/eike-eric-wientjes.de/:/etc/nginx/ssl:ro
-    restart: always
+      - /etc/letsencrypt/:/etc/letsencrypt/
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
