--- a/nginx.conf
+++ b/nginx.conf
@@ -13,7 +13,7 @@
     server {
         listen 443 ssl;
 
-        server_name localhost;
+        server_name eike-eric-wientjes.de;
         root /srv/public;
         server_tokens off;
 
