--- a/package.json
+++ b/package.json
@@ -6,17 +6,18 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "start-server": "node server.js",
-    "deploy": "next build && node server.js"
+    "export": "next export",
+    "deploy": "npm run build && npm run export"
   },
   "dependencies": {
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
+    "firebase": "^10.5.2",
     "jquery": "^3.6.1",
-    "next": "10.0.4",
+    "next": "14.0.1",
     "popper.js": "^1.16.1",
-    "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "sharp": "^0.31.1"
