--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -18,3 +18,5 @@ jobs:
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_HOMEPAGE_53EF2 }}'
           channelId: live
           projectId: homepage-53ef2
+        env:
+          FIREBASE_CLI_EXPERIMENTS: webframeworks
